# visifilter

./: .gitignore  CMakeLists.txt  SConstruct
cmake/: clang_overrides.cmake  cpm.cmake  dependencies.cmake  options.cmake
plots/: 2025-01-01_15h-36min-13s.gnuplot
src/: CMakeLists.txt  SConscript  main.cpp
src/components/: audio_component.cpp  audio_component.h  audio_track_component.cpp  audio_track_component.h  bench_component.cpp  bench_component.h  editor_component.cpp  editor_component.h  main_component.cpp  main_component.h  waveform_view_component.cpp  waveform_view_component.h
src/util/: io.h  leftpad.h  ring_buffer.cpp  ring_buffer.h
test/: CMakeLists.txt
test/src/: HouseTest.cpp  audio_processor_test.cpp
